// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protobuf;

message VersionedMessageV0 {
  string msg = 1;
}

message VersionedMessageV1 {
  string msg = 1;
  int32 value = 2;
}

message VersionedMessageV2 {
  string msg = 1;
  int32 iValue = 2;
  double dValue = 3;
}
